--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.abhi</groupId>
-	<artifactId>Sample-java-project</artifactId>
+	<artifactId>NumberGenerator</artifactId>
 	<packaging>jar</packaging>
 	<version>1.0-SNAPSHOT</version>
 	<name>NumberGenerator</name>
