--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,12 @@
 			<version>4.11</version>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.codehaus.sonar</groupId>
+			<artifactId>sonar-plugin-api</artifactId>
+			<version>5.1</version>
+		</dependency>
 	</dependencies>
  
 	<build>
