--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,11 @@
 			<artifactId>sonar-plugin-api</artifactId>
 			<version>5.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.codehaus.sonar.pdf-report</groupId>
+			<artifactId>sonar-pdfreport-plugin</artifactId>
+			<version>1.3.1</version>
+		</dependency>
 	</dependencies>
  
 	<build>
