--- a/pom.xml
+++ b/pom.xml
@@ -23,9 +23,9 @@
 			<version>5.1</version>
 		</dependency>
 		<dependency>
-			<groupId>org.codehaus.sonar.pdf-report</groupId>
-			<artifactId>sonar-pdfreport-plugin</artifactId>
-			<version>1.3.1</version>
+			<groupId>org.codehaus.sonar-plugins.pdf-report</groupId>
+			<artifactId>sonarpdf-maven-plugin</artifactId>
+			<version>1.3.2</version>
 		</dependency>
 	</dependencies>
  
