--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,12 @@
 			<version>5.1</version>
 		</dependency>
 		<dependency>
+			<groupId>org.codehaus.sonar</groupId>
+			<artifactId>sonar-maven-plugin</artifactId>
+			<version>2.6</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.codehaus.sonar-plugins.pdf-report</groupId>
 			<artifactId>sonarpdf-maven-plugin</artifactId>
 			<version>1.3.2</version>
