--- a/pom.xml
+++ b/pom.xml
@@ -10,36 +10,42 @@
 	<name>NumberGenerator</name>
 	<url>http://maven.apache.org</url>
 	<dependencies>
-<!--		<dependency>
+<!--	
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.11</version>
 			<scope>test</scope>
-		</dependency> -->
+		</dependency> 
+-->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.apache.maven.plugins</groupId>
 			<artifactId>maven-surefire-plugin</artifactId>
 			<version>2.18.1</version>
 		</dependency>
 
-<!--		<dependency>
+<!--		
+		<dependency>
 			<groupId>org.codehaus.sonar</groupId>
 			<artifactId>sonar-plugin-api</artifactId>
 			<version>5.1</version>
 		</dependency> 
 -->
 
-<!--		<dependency>
+<!--		
+		<dependency>
 			<groupId>org.codehaus.sonar</groupId>
 			<artifactId>sonar-maven-plugin</artifactId>
 			<version>2.6</version>
 		</dependency>
 -->
+
 <!--
 		<dependency>
 			<groupId>org.apache.maven.plugins</groupId>
@@ -54,11 +60,13 @@
 			<version>5.1</version>
 		</dependency>
      
-<!--             <dependency>
-                        <org.codehaus.sonar.plugins.pdf-report</groupId>
+<!--
+		<dependency>
+            <org.codehaus.sonar.plugins.pdf-report</groupId>
 			<artifactId>sonarpdf-maven-plugin</artifactId>
 			<version>1.3.2</version>
--->    		</dependency>
+		</dependency>
+-->
 
 </dependencies>
  
@@ -75,5 +83,5 @@
 		</plugin>
 	  </plugins>
 	</build>
---> 
+ 
 </project>
