--- a/pom.xml
+++ b/pom.xml
@@ -59,10 +59,16 @@
 			<artifactId>sonar-maven-plugin</artifactId>
 			<version>5.1</version>
 		</dependency>
+
+		<dependency>
+			<groupId>commons-configuration</groupId>
+			<artifactId>commons-configuration</artifactId>
+			<version>1.10</version>
+		</dependency>
      
 <!--
 		<dependency>
-            <org.codehaus.sonar.plugins.pdf-report</groupId>
+                        <groupId>org.codehaus.sonar.plugins.pdf-report</groupId>
 			<artifactId>sonarpdf-maven-plugin</artifactId>
 			<version>1.3.2</version>
 		</dependency>
