--- a/pom.xml
+++ b/pom.xml
@@ -10,25 +10,13 @@
 	<name>NumberGenerator</name>
 	<url>http://maven.apache.org</url>
 	<dependencies>
-<!--	
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.11</version>
-			<scope>test</scope>
-		</dependency> 
--->
+
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
 		</dependency>
 
-		<dependency>
-			<groupId>org.apache.maven.plugins</groupId>
-			<artifactId>maven-surefire-plugin</artifactId>
-			<version>2.18.1</version>
-		</dependency>
 
 <!--		
 		<dependency>
@@ -66,13 +54,12 @@
 			<version>1.10</version>
 		</dependency>
      
-<!--
+
 		<dependency>
                         <groupId>org.codehaus.sonar.plugins.pdf-report</groupId>
 			<artifactId>sonarpdf-maven-plugin</artifactId>
 			<version>1.3.2</version>
 		</dependency>
--->
 
 </dependencies>
  
@@ -82,10 +69,10 @@
 			<groupId>org.apache.maven.plugins</groupId>
 			<artifactId>maven-compiler-plugin</artifactId>
 			<version>3.3</version>
-		<!--	<configuration>
+			<configuration>
 				<source>1.6</source>
 				<target>1.6</target>
-			</configuration> -->
+			</configuration> 
 		</plugin>
 	  </plugins>
 	</build>
