--- a/pom.xml
+++ b/pom.xml
@@ -17,12 +17,12 @@
 			<version>4.12</version>
 		</dependency>
 	
-        	<dependency>
+<!--        	<dependency>
 			<groupId>org.codehaus.sonar</groupId>
 			<artifactId>sonar-maven-plugin</artifactId>
 			<version>5.1</version>
 		</dependency>
-
+-->
 
 </dependencies>
  
